# FastCoDy

./: .gitignore  .gitmodules  README.md  cluster.py  fast.py  main.py
convert/: create_dmat.py  export_anim.py  export_obj.py  export_tgf.py  msh_to_mesh.py  output.mesh  output.obj_.msh  output.tgf
examples/: makefile  viewer_tgf.py
examples/human/: human.dmat  human.json  human.mesh  human.tgf  human_anim.txt
examples/mic/: mic.dmat  mic.json  mic.mesh  mic.tgf  mic_anim.txt
pybind/: CMakeLists.txt  arap.cpp
sim/: __init__.py  arap_dq.py  arap_dq2.py  arap_q.py  dphi.py  dsvd.py  kron.py  psd_fix.py
solver/: __init__.py  arap_precomp_dynamic.py  arap_precomp_static.py  arap_solver.py  sim_state.py
src/: __init__.py  cluster_group.py  create_mask_matrix.py  create_vol_weights.py  eigenmode.py  lbs_matrix.py  line_search.py  lumped_mass_matrix.py  read_data_from_gltf.py  read_data_from_json.py  surface_cast.py  util.py  weight_space_constraint.py
